--- a/src/html/c64opcodes.css
+++ b/src/html/c64opcodes.css
@@ -86,6 +86,10 @@ body.vscode-high-contrast {
   font-family: 'Courier New', Courier, monospace;
 }
 
+#left {
+  text-align: left;
+}
+
 
 /*----------------------------------[ BACKGROUND BLOCKS ]-----------------------------------*/
 
@@ -126,6 +130,7 @@ body.vscode-high-contrast {
   left: 0px;
   bottom: 20px;
   text-align: center;
+  float: left;
 }
 
 .AllButtonBack {
