--- a/src/html/c64opcodes.css
+++ b/src/html/c64opcodes.css
@@ -46,6 +46,30 @@ body {
   font-size: var(--vscode-editor-font-size);
 }
 
+h1 {
+  font-size: 4vw;
+}
+
+h2 {
+  font-size: 3vw;
+}
+
+h3 {
+  font-size: 2.5vw;
+}
+
+h4 {
+  font-size: 2vw;
+}
+
+h5 {
+  font-size: 1.5vw;
+}
+
+h6 {
+  font-size: 1vw;
+}
+
 #page-container {
   position: relative;
   min-height: 100vh;
