--- a/src/html/c64opcodes.css
+++ b/src/html/c64opcodes.css
@@ -336,6 +336,24 @@ table.modes td {
   font-size: small;
 }
 
+.text-table {
+  border: 1px solid;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  align-content: center
+}
+
+.text-table th, td {
+  border: 1px solid;
+  border-collapse: collapse;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 
 /*----------------------------------[ BUTTONS ]-----------------------------------*/
 
